# well-known-value-service

./: .pre-commit-config.yaml  Dockerfile  Dockerfile.debian  Dockerfile.dhi  README.md  config_schema.json  example_config.yaml  openapi.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg
.devcontainer/: .dev_config.yaml  dev_launcher  devcontainer.json  docker-compose.yml
.pyproject_generation/: pyproject_custom.toml
.readme_generation/: description.md  design.md
lock/: requirements-dev.in  requirements-dev.txt  requirements.txt
my_microservice/: models.py
scripts/script_utils/: fastapi_app_location.py
src/wkvs/: __main__.py  cli.py  config.py  container.py  inject.py  main.py
src/wkvs/adapters/: __init__.py
src/wkvs/adapters/inbound/fastapi_/: __init__.py  configure.py  dummies.py  routes.py
tests/: test_api.py
tests/fixtures/: config.py  joint.py  test_config.yaml
wkvs/: __init__.py  __main__.py  config.py  main.py
wkvs/adapters/inbound/fastapi_/: routes.py
wkvs/api/: main.py
